--- a/environment.yml
+++ b/environment.yml
@@ -1,24 +1,26 @@
 ##########################
 # Versions updated to last on conda-forge and pypi
 # Author: Julian Bolivar
-# Date: 2023-05-09
-# Version: 2.1.0  Dependencies slow env creation fixed
+# Date: 2023-05-14
+# Version: 2.2.0
 ##########################
 name: nyc_airbnb_dev
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10.10
-  - mlflow=2.3.1
-  - ipython=8.13.2
+  - python=3.8.16
+  - mlflow=2.3.2
+  - numpy=1.24.3
+  - ipython=8.12.2
   - notebook=6.5.4
   - jupyterlab=3.6.3
   - cookiecutter=2.1.1
   - hydra-core=1.3.2
   - matplotlib=3.7.1
-  - pandas=2.0.1
+  - pandas=2.0.4
+  - protobuf=4.21.12
   - git=2.40.1
   - pip=23.1.2
   - pip:
-      - wandb==0.15.2
+      - wandb=0.15.2
