--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@
 # Versions updated to last on conda-forge and pypi
 # Author: Julian Bolivar
 # Date: 2023-05-14
-# Version: 2.2.0
+# Version: 2.2.1
 ##########################
 name: nyc_airbnb_dev
 channels:
@@ -18,9 +18,9 @@ dependencies:
   - cookiecutter=2.1.1
   - hydra-core=1.3.2
   - matplotlib=3.7.1
-  - pandas=2.0.4
+  - pandas=2.0.1
   - protobuf=4.21.12
   - git=2.40.1
   - pip=23.1.2
   - pip:
-      - wandb=0.15.2
+      - wandb==0.15.2
