--- a/cookie-mlflow-step/{{cookiecutter.step_name}}/conda.yml
+++ b/cookie-mlflow-step/{{cookiecutter.step_name}}/conda.yml
@@ -3,6 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pip=20.3.3
+  - python=3.8.16
+  - mlflow=2.3.2
+  - pip=23.1.2
   - pip:
-      - wandb==0.10.31
+      - wandb==0.15.2
