--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
 ##########################
 # Versions updated to last on conda-forge and pypi
 # Author: Julian Bolivar
-# Date: 2023-05-14
-# Version: 2.2.1
+# Date: 2023-05-15
+# Version: 2.2.2
 ##########################
 name: nyc_airbnb_dev
 channels:
@@ -20,6 +20,9 @@ dependencies:
   - matplotlib=3.7.1
   - pandas=2.0.1
   - protobuf=4.21.12
+  - pytest=7.3.1
+  - pylint=2.17.4
+  - autopep8=2.0.2
   - git=2.40.1
   - pip=23.1.2
   - pip:
