--- a/src/data_check/conda.yml
+++ b/src/data_check/conda.yml
@@ -3,6 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.8.16
+  - mlflow=2.3.2
+  - numpy=1.24.3
+  - ipython=8.12.2
   - pandas=2.0.1
   - pytest=7.3.1
   - scipy=1.5.2
