--- a/src/eda/conda.yml
+++ b/src/eda/conda.yml
@@ -3,6 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.8.16
+  - mlflow=2.3.2
+  - numpy=1.24.3
+  - ipython=8.12.2
+  - notebook=6.5.4
   - jupyterlab=3.6.3
   - seaborn=0.11.1
   - pandas=2.0.1
