--- a/src/eda/conda.yml
+++ b/src/eda/conda.yml
@@ -1,18 +1,24 @@
+##########################
+# Versions updated to last on conda-forge and pypi
+# Author: Julian Bolivar
+# Date: 2023-05-15
+# Version: 1.1.0
+##########################
 name: eda
 channels:
   - conda-forge
   - defaults
 dependencies:
   - python=3.8.16
-  - mlflow=2.3.2
-  - numpy=1.24.3
-  - ipython=8.12.2
-  - notebook=6.5.4
-  - jupyterlab=3.6.3
-  - seaborn=0.11.1
-  - pandas=2.0.1
+  - mlflow
+  - numpy
+  - ipython
+  - notebook
+  - jupyterlab
+  - seaborn
+  - pandas
   - pip=23.1.2
-  - pandas-profiling=2.11.0
-  - pyarrow=2.0
+  - ydata-profiling
+  - pyarrow
   - pip:
       - wandb==0.15.2
